# notion-auto-pm

./: .gitignore  AGENTS.md  CLAUDE.md  _MANIFEST.md  backfill_due_dates.py  backfill_master_wbs_links.py  backup_master_deprecated_cols.py  check_orphaned_sessions.py  cleanup_all_orphans.py  fix_is_completed_formula.py  fix_status_schema.py  fix_work_type_columns.py  focal_students.json  main.py  master_deprecated_backup_20260614_132357.json  notion_wbs_sources.json  notion_wbs_sync.py  pyproject.toml  requirements.txt  restore_archived_tasks.py  restore_missing_tasks.py  restore_work_sessions.py  run_health_check.py  sync_work_type_options.py  work_types.json
backups/: notion_backup_20260614_152856.json  notion_backup_20260615_161631.json  notion_backup_20260616_155153.json  notion_backup_20260617_142612.json  notion_backup_20260618_140912.json  notion_backup_20260619_141246.json  notion_backup_20260620_122554.json  notion_backup_20260621_130401.json  notion_backup_20260622_154959.json  notion_backup_20260623_134234.json  notion_backup_20260624_132040.json  notion_backup_20260625_131423.json  notion_backup_20260626_130952.json  notion_backup_20260627_120757.json  notion_backup_20260628_121506.json  notion_backup_20260629_144638.json  notion_backup_20260630_130844.json  notion_backup_20260701_133253.json
data/: orphan_backup_20260612_163008.json  orphan_backup_20260612_163138.json  orphaned_sessions_report.json
docs/: AI_Cowork_Process_Guide.html  Cowork_vs_ClaudeCode_Guide.md  Human-AI Collaboration on Faculty PM Dev Project.docx  notion-new-project.skill
(+59 files in other folders)
