[project]
name = "focal"
version = "1.0.0"
description = "Notion PM sync tool for faculty workflow"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "requests>=2.32",
]

[project.scripts]
focal = "focal.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
